--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "koa-flash-message": "^0.1.6",
     "koa-logger": "^3.2.1",
     "koa-override-method": "^1.0.0",
+    "koa-passport": "^4.1.3",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.2",
     "koa-static": "^5.0.0",
