--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-command": "^0.5.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "core-js": "^3.2.1",
     "dotenv": "^8.1.0",
     "koa": "^2.7.0",
