--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cloudinary": "^1.16.0",
     "core-js": "^3.2.1",
     "dotenv": "^8.1.0",
     "koa": "^2.7.0",
