--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cloudinary": "^1.16.0",
     "core-js": "^3.2.1",
     "dotenv": "^8.1.0",
+    "faker": "^4.1.0",
     "jsonapi-serializer": "^3.6.5",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
