--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "koa-body": "^4.1.1",
     "koa-ejs": "^4.2.0",
     "koa-flash-message": "^0.1.6",
+    "koa-jwt": "^3.6.0",
     "koa-logger": "^3.2.1",
     "koa-override-method": "^1.0.0",
     "koa-router": "^7.4.0",
